--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -1,10 +1,14 @@
 # 5.0.1 AS IS & TO BE BPMN 
 ## 5.0.1.1 Consultant approach
-The approach to requirements gathering for BPMN diagram creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. The first step involves performing a comprehensive assessment of existing environment. That includes reviewing current identity and access management processes and business through interviews and analysis of organizational documention to map out the current state and understand key priorities. 
-Collaborative workshops are organized with business and technical stakeholders. These sessions aim to clarify operational procedures, collect functional needs from each entity involved, and document pain points and desired improvements. 
-The work is iterative, esuring every voice is heard and all relevant business scenario covered. The information is synthesized into process models and requirements documents, which are then validated with stakeholders. This collaborative validation ensures accuracy and mutual understanding while enabling early identitfication of inconsistencies or overlooked needs. 
-BPMN diagrams are drafted based on validated requirements. Further review sessions are held to presenet the diagrams, allowing for all stakeholder feedback and iterative refinement until a common, operationally viable view is reached. 
-All final diagrams are archived and shared as deliverables, ensuring that the functional vision is traceable and can serve both implementation and future process optimization work. 
+The approach to requirements gathering for BPMN creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. It begins with a comprehensive assessment of the current environment, including a review of identity and access management processes through interviews and document analysis to understand key priorities and risks.
+
+Collaborative workshops with business and technical stakeholders clarify operational procedures, collect functional requirements, and identify pain points and desired improvements. This iterative process ensures all voices are heard and relevant scenarios covered.
+
+Validated information is synthesized into process models and requirements documents, reviewed in sessions with stakeholders for feedback and refinement until reaching a common, operationally viable view.
+
+The final BPMN diagrams, archived and shared as deliverables, provide a traceable, functional vision for implementation and continuous process optimization.
+
+Additionally, process improvement opportunities were prioritized based on identified risks to critical components, ensuring that security enhancements brought the greatest value and addressed the most pressing vulnerabilities.
 
 ## 5.0.2 Process 1 – Appointment Scheduling (DXPlanning)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
