--- a/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
+++ b/05_Analysis-and-Design/5.0_Stakeholders-workshops-BPMN_AS-IS_TO_BE.md
@@ -174,6 +174,10 @@ This approach provides secure, traceable, and patient-centered medication workfl
 | Complete and provide ID card back to patient| End with secure e-prescription, ID verification| Patient data privacy, compliance, and process finalization|
 
 ### 5.0.5.7 Client IAM procedure development 
-As an IAM consultant, after conducting interviews, analyzing, and validating the "TO BE" BPMN workflows for patient admission, surgery planning, medication prescription, and appointment scheduling, I assisted the client in developing a specific, tailored, robust, role-based, and auditable IAM procedure. My involvement ensured the integration of strong authentication mechanisms such as MFA and SSO, precise access controls via RBAC and ABAC, and comprehensive traceability aligned with leading industry practices. This procedure significantly enhances the security, compliance, and governance of critical hospital systems managing these vital healthcare processes, thereby supporting operational efficiency and protecting sensitive patient information.
+As an IAM consultant, after conducting interviews, analyzing, and validating the "TO BE" BPMN workflows for patient admission, surgery planning, medication prescription, and appointment scheduling, I assisted the client in developing a specific, tailored, robust, role-based, and auditable IAM procedure. 
+
+My involvement ensured the integration of strong authentication mechanisms such as MFA and SSO, precise access controls via RBAC and ABAC, and comprehensive traceability aligned with leading industry practices. 
+
+This procedure significantly enhances the security, compliance, and governance of critical hospital systems managing these vital healthcare processes, thereby supporting operational efficiency and protecting sensitive patient information.
 
 *Link*: [Official procedure](../99_Support-documents/Official_procedure_CHR_Hospital.pdf)
