--- a/02.Requirements Gathering /2.6 Business-Drivers-and-Problem-statement.md
+++ b/02.Requirements Gathering /2.6 Business-Drivers-and-Problem-statement.md
@@ -1,6 +1,6 @@
 # 2.6 Business Drivers and Problem Statement
 
-## 2.6.1 Business Context
+## Business Context
 CHR Brussels is responsible for delivering safe, high-quality patient care while operating under strict regulatory, privacy, and continuity-of-care obligations.
 
 The hospital relies on three core applications to support the patient journey:
@@ -14,7 +14,7 @@ As clinical services scale and staffing models become more dynamic (rotation, on
 
 ---
 
-## 2.6.2 Problem Statement
+## Problem Statement
 The hospital currently faces the following structural issues:
 
 - **No end-to-end identity lifecycle control**  
@@ -34,7 +34,7 @@ The hospital currently faces the following structural issues:
 
 ---
 
-## 2.6.3 Strategic Drivers
+## Strategic Drivers
 The IAM program is driven by the following strategic needs:
 
 1. **Protect patient data and clinical integrity**  
@@ -58,7 +58,7 @@ The IAM program is driven by the following strategic needs:
 
 ---
 
-## 2.6.4 Target IAM Capabilities
+## Target IAM Capabilities
 To meet these drivers, CHR Brussels plans to implement an integrated IAM stack composed of:
 
 - **SailPoint (IGA)**  
@@ -87,7 +87,7 @@ This stack has been selected for its ability to:
 
 ---
 
-## 2.6.5 BRD Objective
+## BRD Objective
 The goal of the Business Requirements Document (BRD) is to formalize:
 - the business risks,
 - the functional requirements,
