--- a/02.Requirements Gathering /2.8 Risk-and-Impact-Analysis.md
+++ b/02.Requirements Gathering /2.8 Risk-and-Impact-Analysis.md
@@ -1,6 +1,6 @@
 # 2.8 Risk and Impact Analysis
 
-## 2.8.1 Context
+## Context
 CHR Brussels handles thousands of patient interactions daily — from appointment scheduling to surgery planning and patient record management.  
 Each operation involves sensitive data, critical clinical workflows, and multi-system interactions (DXPlanning, QBLOC, OASIS+).
 
@@ -18,7 +18,7 @@ This Risk and Impact Analysis provides a structured view of:
 
 ---
 
-## 2.8.2 Consolidated Risk Analysis Table
+## Consolidated Risk Analysis Table
 
 | **Risk ID** | **Business Process** | **System(s)** | **Risk Description** | **Impact** | **Probability** | **Risk Level** | **Mitigation (IAM Control)** | **Linked BR ID** |
 |--------------|----------------------|----------------|----------------------|-------------|------------------|----------------|------------------------------|------------------|
@@ -31,7 +31,7 @@ This Risk and Impact Analysis provides a structured view of:
 
 ---
 
-## 2.8.3 Risk Scoring Model
+## Risk Scoring Model
 
 | Impact Level | Description |
 |---------------|-------------|
@@ -48,7 +48,7 @@ Each identified risk has been evaluated based on:
 
 ---
 
-## 2.8.4 Risk Mitigation Summary
+## Risk Mitigation Summary
 
 | IAM Component | Primary Risk Mitigation Capability |
 |----------------|------------------------------------|
@@ -60,7 +60,7 @@ Together, these three layers enforce a **Zero Trust IAM Governance** model, no i
 
 ---
 
-## 2.8.5 Conclusion
+## Conclusion
 Without an integrated IAM framework, CHR Brussels remains exposed to:
 - operational inefficiencies,  
 - potential GDPR / ISO 27799 violations,  
