--- a/02.Requirements Gathering /2.9 IAM-Solution-Mapping.md
+++ b/02.Requirements Gathering /2.9 IAM-Solution-Mapping.md
@@ -1,13 +1,13 @@
 # 2.9 IAM Solution Mapping
 
-## 2.9.1 Purpose
+## Purpose
 
 This section defines how each IAM component — **SailPoint (IGA)**, **Okta (IDP)**, and **Wallix (PAM)** — addresses the functional and regulatory gaps identified in the risk analysis (Section 3.2).  
 The goal is to provide a clear functional mapping of IAM solutions across the hospital’s critical applications: **DXPlanning**, **OASIS+**, **QBLOC**, and **ePrescription/eHealth**.
 
 ---
 
-## 2.9.2 Overview of the IAM Architecture
+## Overview of the IAM Architecture
 
 The CHR Brussels IAM program is designed around the **Zero Trust model**, ensuring that no user, system, or device is inherently trusted.  
 Access to patient-related data and clinical systems must be continuously verified, context-aware, and traceable.
@@ -20,7 +20,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 2.9.3 IAM Solution Coverage by Business Process
+## IAM Solution Coverage by Business Process
 
 | **Business Process** | **Primary Systems** | **IGA (SailPoint)** | **IDP (Okta)** | **PAM (Wallix)** |
 |-----------------------|--------------------|---------------------|----------------|------------------|
@@ -31,7 +31,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 2.9.4 Solution Interoperability
+## Solution Interoperability
 
 The three layers of IAM operate in a **complementary and interconnected** manner:
 
@@ -46,7 +46,7 @@ Example Flow:
 
 ---
 
-## 2.9.5 Compliance Integration
+## Compliance Integration
 
 | **Regulation / Standard** | **Supported by** | **IAM Capability** | **Example** |
 |----------------------------|------------------|--------------------|-------------|
@@ -57,7 +57,7 @@ Example Flow:
 
 ---
 
-## 2.9.6 Deliverables
+## Deliverables
 
 | **Deliverable** | **Format** | **Description** |
 |------------------|-------------|-----------------|
@@ -68,7 +68,7 @@ Example Flow:
 
 ---
 
-## 2.9.7 Summary
+## Summary
 
 The IAM ecosystem proposed for CHR Brussels ensures:
 - **Separation of duties** between identity governance, authentication, and privilege control.
