--- a/02.Requirements Gathering /2.9.9 Business-Requirements-Matrix.md
+++ b/02.Requirements Gathering /2.9.9 Business-Requirements-Matrix.md
@@ -1,12 +1,12 @@
 # 2.10 Business Requirements Matrix
 
-## 2.10 .1 Objective
+## Objective
 This section consolidates the business requirements derived from the IAM Solution Mapping (Section 3.3) and the Risk Analysis (Section 3.2).  
 Each requirement ensures secure, compliant, and traceable management of identities and access rights within CHR Brussels’ hospital systems.
 
 ---
 
-## 2.10.2 Business Requirements Table
+## Business Requirements Table
 
 | **BR ID** | **Business Process** | **System / Application** | **Business Requirement** | **IAM Component** | **Regulatory Reference** | **Linked Risk ID** |
 |------------|---------------------|---------------------------|---------------------------|-------------------|---------------------------|--------------------|
@@ -22,7 +22,7 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 
 ---
 
-## 2.10.3 Traceability Overview
+## Traceability Overview
 
 | **Requirement Source** | **Linked Output** | **Document / Tool** |
 |-------------------------|------------------|---------------------|
@@ -33,7 +33,7 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 
 ---
 
-## 2.10.4 Deliverables
+## Deliverables
 
 | **Deliverable** | **Format** | **Description** |
 |------------------|-------------|-----------------|
@@ -44,7 +44,7 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 
 ---
 
-## 2.10.5 Summary
+## Summary
 This Business Requirements Matrix establishes a unified view of the hospital’s IAM governance framework.  
 It ensures that each clinical operation — from appointment scheduling to prescription issuance — complies with Zero Trust principles and regulatory mandates.  
 The next phase (3.5) will define the **Success Criteria**, measuring how effectively these requirements mitigate risks and strengthen compliance posture.
