Update 2.9.9.9 Success criteria.md

--- a/02.Requirements Gathering /2.9.9.9 Success criteria.md
+++ b/02.Requirements Gathering /2.9.9.9 Success criteria.md
@@ -1,12 +1,12 @@
 # 2.11 Success Criteria
 
-## 2.11.1 Objective
+## Objective
 The purpose of this section is to define measurable success indicators for the IAM implementation at CHR Brussels.  
 These criteria ensure that the project delivers tangible security, compliance, and operational improvements aligned with the hospital’s Zero Trust vision.
 
 ---
 
-## 2.11.2 Success Criteria Overview
+## Success Criteria Overview
 
 | **Category** | **Success Criteria** | **Measurement / KPI** | **Target** | **Validation Method** |
 |---------------|----------------------|------------------------|-------------|------------------------|
@@ -25,7 +25,7 @@ These criteria ensure that the project delivers tangible security, compliance, a
 
 ---
 
-## 2.11.3 Overall Project Success Factors
+## Overall Project Success Factors
 
 1. **Operational Efficiency**
    - Reduction in manual account management by at least 80%.  
@@ -46,7 +46,7 @@ These criteria ensure that the project delivers tangible security, compliance, a
 
 ---
 
-## 2.11.4 Deliverables
+## Deliverables
 
 | **Deliverable** | **Format** | **Description** |
 |------------------|-------------|-----------------|
@@ -56,7 +56,7 @@ These criteria ensure that the project delivers tangible security, compliance, a
 
 ---
 
-## 2.11.5 Summary
+## Summary
 The defined success criteria provide a clear and measurable framework to assess IAM implementation maturity within CHR Brussels.  
 They ensure the project delivers on its three primary objectives:
 - Strengthening data security and patient privacy,  
