Update 3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md

--- a/03.Conception/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
+++ b/03.Conception/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
@@ -1,5 +1,5 @@
-# 5.0.1 AS IS & TO BE BPMN 
-## 5.0.1.1 Consultant approach
+# 3.1 AS IS & TO BE BPMN 
+## Consultant approach
 The approach to requirements gathering for BPMN creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. It begins with a comprehensive assessment of the current environment, including a review of identity and access management processes through interviews and document analysis to understand key priorities and risks.
 
 Collaborative workshops with business and technical stakeholders clarify operational procedures, collect functional requirements, and identify pain points and desired improvements. This iterative process ensures all voices are heard and relevant scenarios covered.
@@ -10,17 +10,17 @@ The final BPMN diagrams, archived and shared as deliverables, provide a traceabl
 
 Additionally, process improvement opportunities were prioritized based on identified risks to critical components, ensuring that security enhancements brought the greatest value and addressed the most pressing vulnerabilities.
 
-## 5.0.2 Process 1 – Appointment Scheduling (DXPlanning)
+## Process 1 – Appointment Scheduling (DXPlanning)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
-## 5.0.2.1 Actors 
+## Actors 
 - Patient
 - Medical secretary
 
-## 5.0.2.2 Systems involved 
+## Systems involved 
 - DXPlanning
 
-## 5.0.2.3 Identified risks & ISO27799 threats
+## Identified risks & ISO27799 threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -29,16 +29,16 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Unauthorized modification of appointment data|Masquerade by insiders|
 |No audit trail for created appointments|Repudiation|
 
-## 5.0.2.4 BPMN AS IS
+## BPMN AS IS
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/6a277f49d47c5f6d50d0e99eb748d1e1f2b7be7d/99_Support-documents/Appointment_scheduling_AS_IS_DXPLANNING.PNG?raw=true)
 *Figure 1 - AS-IS Appointment scheduling (DXPLANNING)*
 
-## 5.0.2.5 BPMN TO BE
+## BPMN TO BE
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/e6bc13ffde27eb2ddef8c2c9b5897f032bed93e0/99_Support-documents/Appointment_scheduling_DXPLANNING_TOBE.PNG?raw=true)
 *Figure 2 - TO-BE Appointment scheduling (DXPLANNING)*
 
-## 5.0.2.6 Benefits
+## Benefits
 
 | **Process Step** | **Solution** | **Benefit** |
 |------------------|----------|----------|
@@ -48,17 +48,17 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Access Rights management (RBAC| RBAC applied for “medical secretary” role (read, write, modify, create patient| Precise permission control aligned with job function|
 |Contextual Access Control (ABAC)| ABAC rules applied (“no medical content allowed”)|Protection of sensitive medical data ensuring confidentiality compliance|
 
-## 5.0.3 Process 2 – Patient Admission (OASIS+)
+## Process 2 – Patient Admission (OASIS+)
 In the current process, front-desk agents access OASIS+ through generic terminals without authentication or contextual restrictions.
 Full patient records are visible regardless of the agent’s role or location, creating a privacy and compliance risk (GDPR Art. 32).
-## 5.0.3.1 Actors 
+## Actors 
 - Patient
 - Reception agent
 
-## 5.0.3.2 Systems invovled 
+## Systems invovled 
 - Oasis+ 
 
-## 5.0.3.3 Identified risks & ISO27799 threats
+## Identified risks & ISO27799 threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -68,17 +68,17 @@ Full patient records are visible regardless of the agent’s role or location, c
 |Potential exposure of patient data|Communications interception|
 |No logging of data access|Repudiation|
 
-### 5.0.3.4 BPMN AS IS
+### BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/8c01666a69f1a16e693bbd48a7d8e419f5bb6250/99_Support-documents/Process_n%C2%B02_Patient_Admission_OASIS%2B_ASIS.PNG?raw=true)
 *Figure 3 - AS-IS Patient admission (OASIS+)*
 
-## 5.0.3.5 BPMN TO BE 
+## BPMN TO BE 
 This model complies with recommendations for identity vigilance, user access management and rights administration within a modern hospital. It significantly improves the security, traceability and compliance of the patient care process.
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/f894bf3acef321a43857573e09d02fd9b979f98e/99_Support-documents/Patient_admission_OASIS%2B_TOBE.PNG?raw=true)
 *Figure 4 - TO BE - Patient admission (OASIS+)*
 
-## 5.0.3.6 Benefits
+## Benefits
 
 This table outlines the secured patient admission process enhanced with IAM (Okta), centralized identity management (IDP), and privileged access management (PAM) for improved security, compliance, and patient data integrity in a hospital setting.
 
@@ -91,18 +91,18 @@ This table outlines the secured patient admission process enhanced with IAM (Okt
 | Verify insurance coverage | OASIS+ checks patient’s insurance status | Confirm valid insurance to prevent billing issues|
 | Confirm admission | Finalize admission with logged operations| Complete audit trail for accountability and compliance|
 
-## 5.0.4 Process 3 - Surgery Planning (QBLOC)
+## Process 3 - Surgery Planning (QBLOC)
 Currently, QBLOC can be accessed by any hospital staff member using shared credentials or unprotected sessions.
 Surgery schedules can be modified without validation or traceability, leading to potential data integrity breaches and patient safety risks.
 
-## 5.0.4.1 Actors 
+## Actors 
 - Surgeon
 - Anesthetist
 - Room coordinator
 
-## 5.0.4.2 Systems involved
+## Systems involved
 - OASIS+
-### 5.0.4.3 Identified risk & threats
+### Identified risk & threats
 
 | **Risk** | **ISO27799 threat** | 
 |------------------|----------|
@@ -112,16 +112,16 @@ Surgery schedules can be modified without validation or traceability, leading to
 |Shared credentials between staff|Masquerade by insiders|
 |Incorrect resource allocation impacting surgery|Operator error|
 
-### 5.0.4.4 BPMN AS IS
+### BPMN AS IS
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/6a72260bbd64fd672edb82f7de68d4fb1b897c28/99_Support-documents/Sugery_planning_QBLOC_AS-IS.PNG?raw=true)
 
 *Figure 5 - AS-IS Surgery planning (QBLOC)*
 
-### 5.0.4.5 BPMN TO BE 
+### BPMN TO BE 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/764fa900541d19760ccedf748e89bb78426925f3/99_Support-documents/Surgery_planning_QBLOC_TO-BE.PNG?raw=true)
 *Figure 6 - TO-BE Surgery planning (QBLOC)*
 
-### 5.0.4.6 Benefits
+### Benefits
 This table details the secured and auditable surgical planning process in QBLOC, aligned with IGA, IDP, and PAM best practices to improve security, coordination, and compliance in the hospital surgical workflow.
 | **Process Step** | **Solution** | **Benefit** |
 |------------------|----------|----------|
@@ -136,14 +136,14 @@ This table details the secured and auditable surgical planning process in QBLOC,
 |Surgery planning finalization| QBLOC finalizes plan including team, room, duration, auto dispatch notifications| Comprehensive, auditable surgery schedule with automatic updates|
 | Surgery scheduled| End event with surgery successfully scheduled | Reliable surgery planning with full traceability|
 
-## 5.0.5 Process 4 - Medication prescription (ePrescription / OASIS+) 
+## Process 4 - Medication prescription (ePrescription / OASIS+) 
 Prescriptions are currently issued manually without strong authentication or automated therapeutic link verification.
 The process lacks digital signature enforcement, leading to potential identity misuse and non-compliance with eHealth and Recip-e standards.
 
-## 5.0.5.1 Actors 
+## Actors 
 - physician 
-## 5.0.5.2 System involved 
-### 5.0.5.3 identified risks & ISO27799 threats 
+## System involved 
+### identified risks & ISO27799 threats 
 
 | **Risks** | **ISO27799 threat** | 
 |------------------|----------|
@@ -153,14 +153,14 @@ The process lacks digital signature enforcement, leading to potential identity m
 |Lack of traceability for prescritpion Unauthorized use of a health information application|
 |Transmission without encryption|Communication interception|
 
-### 5.0.5.4 BPMN AS IS 
+### BPMN AS IS 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/95ddd7e675a8b7c16fd5c132d26186274ff5755f/Patient_prescription_ASIS.PNG?raw=true)
 *Figure 7 - AS-IS Medication prescription & therapeutic link verification (e-prescription / OASIS+)*
-### 5.0.5.5 BPMN TO BE 
+### BPMN TO BE 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/1f08e25ffac48d1e0230e8dd275aa2147f5fa59d/99_Support-documents/E-prescription_and_TL_validation.PNG?raw=true)
 *Figure 8 - TO-BE Medication prescription & therapeutic link verification (e-prescription / OASIS+)*
 
-### 5.0.5.6 Benefits 
+### Benefits 
 This approach provides secure, traceable, and patient-centered medication workflows, validating the TO BE BPMN as an aligned procedure with healthcare industry best practice.
 
 | **Process Step** | **Solution** | **Benefit** |
@@ -173,7 +173,7 @@ This approach provides secure, traceable, and patient-centered medication workfl
 |Administer medication| Doctor follows secure steps with traceability| Ensures right patient and medication, auditability|
 | Complete and provide ID card back to patient| End with secure e-prescription, ID verification| Patient data privacy, compliance, and process finalization|
 
-### 5.0.5.7 Client IAM procedure development 
+### Client IAM procedure development 
 As an IAM consultant, after conducting interviews, analyzing, and validating the "TO BE" BPMN workflows for patient admission, surgery planning, medication prescription, and appointment scheduling, I assisted the client in developing a specific, tailored, robust, role-based, and auditable IAM procedure. 
 
 My involvement ensured the integration of strong authentication mechanisms such as MFA and SSO, precise access controls via RBAC and ABAC, and comprehensive traceability aligned with leading industry practices. 
