--- a/03.Conception/3.2 IAM Dataflow diagram.md
+++ b/03.Conception/3.2 IAM Dataflow diagram.md
@@ -4,7 +4,7 @@ This section illustrates how identity and access data move through the CHR Bruss
 
 ---
 
-## 🔷 Overview Diagram
+## Overview Diagram
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/2c1ea457e2f913d73e9aa229670f2a5393a3a3d7/99_Support-documents/IAM_DATAFLOW_DIAGRAM.PNG?raw=true)
 
@@ -16,7 +16,7 @@ This section illustrates how identity and access data move through the CHR Bruss
 
 ---
 
-## 🔹 1. HR → IGA (Identity Source Flow)
+## HR → IGA (Identity Source Flow)
 **Description:**  
 HR systems ULIS and Foederis provide employee lifecycle events to SailPoint (Joiner, Mover, Leaver).  
 **Data exchanged:** EmployeeID, Name, Department, Role, Status.  
@@ -26,7 +26,7 @@ HR systems ULIS and Foederis provide employee lifecycle events to SailPoint (Joi
 
 ---
 
-## 🔹 2. IGA → IDP (Identity Federation Flow)
+## IGA → IDP (Identity Federation Flow)
 **Description:**  
 SailPoint provisions identities to Okta to enable authentication and SSO.  
 **Data exchanged:** User profile, email, roles, group memberships.  
@@ -36,7 +36,7 @@ SailPoint provisions identities to Okta to enable authentication and SSO.
 
 ---
 
-## 🔹 3. IGA → Applications (Access Provisioning Flow)
+## IGA → Applications (Access Provisioning Flow)
 **Description:**  
 SailPoint automatically provisions access to business apps based on role and department attributes.  
 **Target Apps:** DXPlanning, QBLOC, OASIS+.  
@@ -47,7 +47,7 @@ SailPoint automatically provisions access to business apps based on role and dep
 
 ---
 
-## 🔹 4. IDP → Applications (Authentication Flow)
+## IDP → Applications (Authentication Flow)
 **Description:**  
 Okta manages secure SSO for end-users to access hospital apps.  
 **Data exchanged:** Authentication tokens (SAML / OIDC).  
@@ -56,7 +56,7 @@ Okta manages secure SSO for end-users to access hospital apps.
 
 ---
 
-## 🔹 5. PAM → Infrastructure & APIs (Privileged Access Flow)
+## PAM → Infrastructure & APIs (Privileged Access Flow)
 **Description:**  
 Wallix secures and audits all administrative access (infrastructure, HL7 APIs, DBs).  
 **Data exchanged:** Vaulted credentials, session logs.  
@@ -65,7 +65,7 @@ Wallix secures and audits all administrative access (infrastructure, HL7 APIs, D
 
 ---
 
-## 🔹 6. Compliance & Reporting Flow
+## Compliance & Reporting Flow
 **Description:**  
 SailPoint, Okta, and Wallix export logs to the IAM Dashboard for audit and KPI monitoring.  
 **Data exchanged:** Activity logs, certification reports, SoD violations.  
