Update 3.3 Solution mapping.md

--- a/03.Conception/3.3 Solution mapping.md
+++ b/03.Conception/3.3 Solution mapping.md
@@ -1,12 +1,12 @@
 # 3.2 IAM Solution Mapping
 
-## 5.2.1 Purpose
+## Purpose
 
 This section defines how each IAM component — **SailPoint (IGA)**, **Okta (IDP)**, and **Wallix (PAM)** — addresses the functional and regulatory gaps identified in the risk analysis (Section 3.2).  
 The goal is to provide a clear functional mapping of IAM solutions across the hospital’s critical applications: **DXPlanning**, **OASIS+**, **QBLOC**, and **ePrescription/eHealth**.
 
 
-## 5.2.2 IAM Architecture Overview 
+## IAM Architecture Overview 
 
 The following diagram illustrates the overall architecture of the IAM ecosystem for CHR Brussels.  
 It highlights the integration between **HR sources (ULIS, Foederis)**, the **IAM Core Stack** (SailPoint, Okta, Wallix),  
@@ -18,7 +18,7 @@ and the **target applications** (OASIS+, DXPlanning, QBLOC).
 
 ---
 
-## 5.2.3 Overview of the IAM Architecture
+## Overview of the IAM Architecture
 
 The CHR Brussels IAM program is designed around the **Zero Trust model**, ensuring that no user, system, or device is inherently trusted.  
 Access to patient-related data and clinical systems must be continuously verified, context-aware, and traceable.
@@ -31,7 +31,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 5.2.4 IAM Solution Coverage by Business Process
+## IAM Solution Coverage by Business Process
 
 | **Business Process** | **Primary Systems** | **IGA (SailPoint)** | **IDP (Okta)** | **PAM (Wallix)** |
 |-----------------------|--------------------|---------------------|----------------|------------------|
@@ -42,7 +42,7 @@ Access to patient-related data and clinical systems must be continuously verifie
 
 ---
 
-## 5.2.5 Solution Interoperability
+## Solution Interoperability
 
 The three layers of IAM operate in a **complementary and interconnected** manner:
 
@@ -57,7 +57,7 @@ Example Flow:
 
 ---
 
-## 5.2.6 Compliance Integration
+## Compliance Integration
 
 | **Regulation / Standard** | **Supported by** | **IAM Capability** | **Example** |
 |----------------------------|------------------|--------------------|-------------|
@@ -68,7 +68,7 @@ Example Flow:
 
 ---
 
-## 5.2.7 Deliverables
+## Deliverables
 
 | **Deliverable** | **Format** | **Description** |
 |------------------|-------------|-----------------|
@@ -79,7 +79,7 @@ Example Flow:
 
 ---
 
-## 5.2.8 Summary
+## Summary
 
 The IAM ecosystem proposed for CHR Brussels ensures:
 - **Separation of duties** between identity governance, authentication, and privilege control.
