Update 3.4 Role Model definition.md

--- a/03.Conception/3.4 Role Model definition.md
+++ b/03.Conception/3.4 Role Model definition.md
@@ -1,12 +1,12 @@
-# 5.3 Role Model Definition
+# Role Model Definition
 
-## 5.3.1 Objective
+## Objective
 This section defines the role model implemented within the IAM ecosystem.  
 It ensures clear segregation of duties, standardized access management, and full traceability of user privileges.
 
 ---
 
-## 5.3.2 Functional Roles
+## Functional Roles
 
 | **Role Name** | **Department / System** | **Key Access Rights** | **Applications Involved** |
 |----------------|--------------------------|------------------------|----------------------------|
@@ -19,7 +19,7 @@ It ensures clear segregation of duties, standardized access management, and full
 
 ---
 
-## 5.3.3 Technical and Privileged Roles
+## Technical and Privileged Roles
 
 | **Role Name** | **System** | **Privileges** | **Managed by** | **PAM Control** |
 |----------------|------------|----------------|----------------|-----------------|
@@ -29,7 +29,7 @@ It ensures clear segregation of duties, standardized access management, and full
 
 ---
 
-## 5.3.4 Segregation of Duties (SoD) Matrix
+## Segregation of Duties (SoD) Matrix
 
 | **Role A** | **Role B** | **Conflict Type** | **Description** | **Control / Mitigation** |
 |-------------|-------------|-------------------|------------------|--------------------------|
@@ -42,7 +42,7 @@ It ensures clear segregation of duties, standardized access management, and full
 
 ---
 
-## 5.3.5 Summary
+## Summary
 The role model ensures that every identity has the minimum necessary rights for its function.  
 All role assignments are managed via **SailPoint workflows**, reviewed quarterly, and monitored by **Wallix** for privileged sessions.
 
