Update 3.5 Application inventory and access matrix.md

--- a/03.Conception/3.5 Application inventory and access matrix.md
+++ b/03.Conception/3.5 Application inventory and access matrix.md
@@ -1,11 +1,11 @@
-# 5.4 Application Inventory and Access Matrix
+# Application Inventory and Access Matrix
 
-## 5.4.1 Objective
+## Objective
 This section lists all applications included in the IAM perimeter, their criticality, and the access model applied.
 
 ---
 
-## 5.4.2 Application Inventory
+## Application Inventory
 
 | **Application** | **Type** | **Owner** | **IAM Integration** | **Criticality** |
 |------------------|----------|------------|----------------------|-----------------|
@@ -21,7 +21,7 @@ This section lists all applications included in the IAM perimeter, their critica
 
 ---
 
-## 5.4.3 Access Matrix
+## Access Matrix
 
 | **Application** | **Role** | **Access Level** | **Authentication** | **Provisioning Source** |
 |------------------|----------|------------------|--------------------|--------------------------|
