Update 3.6 Access review process.md

--- a/03.Conception/3.6 Access review process.md
+++ b/03.Conception/3.6 Access review process.md
@@ -1,11 +1,11 @@
-# 5.5 Access Review Process
+# Access Review Process
 
-## 5.5.1 Objective
+## Objective
 To ensure that access rights remain aligned with job functions, CHR Brussels performs periodic access reviews managed through SailPoint IGA.
 
 ---
 
-## 5.5.2 Review Workflow
+## Review Workflow
 
 **Step 1 – Preparation**  
 - HR updates identity data in ULIS and Foederis.  
@@ -28,7 +28,7 @@ To ensure that access rights remain aligned with job functions, CHR Brussels per
 
 ---
 
-## 5.5.3 Review Frequency and Scope
+## Review Frequency and Scope
 
 | **Review Type** | **Frequency** | **Owner** | **Scope** |
 |------------------|---------------|------------|------------|
@@ -38,7 +38,7 @@ To ensure that access rights remain aligned with job functions, CHR Brussels per
 
 ---
 
-## 5.5.4 Tools and Reports
+## Tools and Reports
 - **Tool:** SailPoint Certification module  
 - **Output:** Audit trail (CSV/PDF)  
 - **Dashboard:** Compliance dashboard integrated with Power BI
