--- a/03.Conception/3.7 Technical interface and APIS.md
+++ b/03.Conception/3.7 Technical interface and APIS.md
@@ -1,11 +1,11 @@
-# 5.6 Technical Interfaces and APIs
+# Technical Interfaces and APIs
 
-## 5.6.1 Objective
+## Objective
 To describe the technical interfaces, connectors, and APIs required for the integration between IAM components and hospital systems.
 
 ---
 
-## 5.6.2 Interface Summary
+## Interface Summary
 
 | **Source System** | **Target System** | **Protocol / API Type** | **Direction** | **Purpose** |
 |--------------------|-------------------|--------------------------|----------------|--------------|
@@ -20,13 +20,13 @@ To describe the technical interfaces, connectors, and APIs required for the inte
 
 ---
 
-## 5.6.3 Compliance Alignment
+## Compliance Alignment
 All interfaces comply with **ISO 27001 Annex A.13.2** (Information Transfer) and **NIS2** requirements for secure communication channels (TLS 1.2+, encrypted credentials vault).
 
 ---
 
-## 5.6.4 Deliverables 
-### 5.6.4.1 IAM interface diagram & IAM API mapping
+## Deliverables 
+### IAM interface diagram & IAM API mapping
 
 ![image_alt](https://github.com/Kristina-1991/IAM-Hospital-CaseStudy-SailPoint-Okta-Wallix/blob/c9c29b97f8ef4e5c3fd231201748ad4b921e7117/99_Support-documents/IAM-Interface-Diagram.PNG?raw=true)
 
