--- a/01.Introduction and Context/01_Introduction-and-Context/1.2_Project-Objectives-and-Scope.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.2_Project-Objectives-and-Scope.md
@@ -1,19 +1,19 @@
-# 1.2 Project Objectives and Scope
+# Project Objectives and Scope
 
-## 1.2.1 Project Overview
+## Project Overview
 The CHR Brussels aims to modernize its identity and access management (IAM) capabilities to secure digital operations related to the patient journey.  
 The initiative will deploy a unified IAM ecosystem composed of:
 - **SailPoint (IGA)** for identity lifecycle automation and governance;
 - **Okta (IDP)** for secure authentication, SSO, and adaptive MFA;
 - **Wallix (PAM)** for privileged account management and traceability.
 
-## 1.2.2 Business Objectives
+## Business Objectives
 - **Enhance patient data protection** by enforcing strong access controls and authentication.
 - **Improve operational efficiency** through automated provisioning and deprovisioning.
 - **Strengthen compliance** with GDPR, NIS2, ISO 27001, ISO 27799, and eHealth Belgium standards.
 - **Support patient journey optimization** by ensuring secure and reliable access to clinical systems (DXPlanning, QBLOC, OASIS+).
 
-## 1.2.3 Project Scope
+## Project Scope
 **In Scope:**
 - Integration of IAM with HR systems (**ULIS** and **Foederis**).
 - Secure access to healthcare applications (**DXPlanning**, **QBLOC**, **OASIS+**).
@@ -26,14 +26,14 @@ The initiative will deploy a unified IAM ecosystem composed of:
 - Network infrastructure upgrades not related to IAM.
 - Integration with third-party systems beyond eHealth APIs (Recip-e, eID, Consent).
 
-## 1.2.4 Key Deliverables
+## Key Deliverables
 - IAM Target Architecture (Zero Trust-based)
 - Business Requirements Document (BRD)
 - Use Case Catalog and Process Diagrams
 - Compliance & Controls Mapping
 - Deployment and Governance Playbooks
 
-## 1.2.5 Success Criteria
+## Success Criteria
 - 100% automation of onboarding and offboarding processes.
 - MFA adoption for all clinical users.
 - Reduction of access-related incidents by 80%.
