--- a/01.Introduction and Context/01_Introduction-and-Context/1.3_Background-and-Challenges.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.3_Background-and-Challenges.md
@@ -1,6 +1,6 @@
-# 1.3 Background and Challenges
+# Background and Challenges
 
-## 1.3.1 Context
+## Context
 The CHR Brussels operates multiple clinical and administrative systems that support the entire patient journey:
 - **DXPlanning** initiates and schedules patient appointments;
 - **QBLOC** manages surgical operations and operating room schedules;
@@ -9,7 +9,7 @@ The CHR Brussels operates multiple clinical and administrative systems that supp
 Currently, user identity and access management are handled manually by the IT department without a centralized IAM framework.  
 This fragmented approach exposes the hospital to significant **operational, confidentiality, and compliance risks**.
 
-## 1.3.2 Key Challenges
+## Key Challenges
 | Challenge | Description | Impact |
 |------------|--------------|---------|
 | **Fragmented identity lifecycle** | User accounts are manually created or deleted with no automation. | Inconsistent access and orphan accounts. |
@@ -18,7 +18,7 @@ This fragmented approach exposes the hospital to significant **operational, conf
 | **Manual role assignment** | Permissions are assigned by individuals without governance. | Misaligned access and role inflation. |
 | **Privileged access risks** | Technical accounts are shared or uncontrolled. | High risk of misuse and lack of traceability. |
 
-## 1.3.3 Transformation Rationale
+## Transformation Rationale
 The project seeks to:
 - Build a **centralized IAM ecosystem** linking HRIS, clinical apps, and eHealth APIs.
 - Align the hospital’s IT environment with **Zero Trust and EU compliance frameworks**.
