--- a/01.Introduction and Context/01_Introduction-and-Context/1.4_Regulatory-Context.md
+++ b/01.Introduction and Context/01_Introduction-and-Context/1.4_Regulatory-Context.md
@@ -1,10 +1,10 @@
-# 1.4 Regulatory Context
+# Regulatory Context
 
-## 1.4.1 Overview
+## Overview
 The CHR Brussels operates in a highly regulated healthcare environment.  
 This IAM initiative must comply with both **European and Belgian** legal frameworks governing information security, privacy, and healthcare data.
 
-## 1.4.2 Applicable Regulations and Standards
+## Applicable Regulations and Standards
 
 | Framework | Key Requirements | Relevance to IAM |
 |------------|------------------|------------------|
@@ -14,7 +14,7 @@ This IAM initiative must comply with both **European and Belgian** legal framewo
 | **ISO 27799** | Health-specific data protection requirements. | Patient confidentiality, logging of medical data access. |
 | **eHealth Belgium Framework** | Digital identity verification, eID integration, Recip-e compliance. | Integration of strong authentication and consent validation. |
 
-## 1.4.3 Alignment with Compliance Controls
+## Alignment with Compliance Controls
 The IAM solution will directly contribute to:
 - **GDPR Article 32:** Implementation of appropriate technical and organizational measures.
 - **NIS2 Article 21:** Adoption of risk management practices and access control policies.
