--- a/02.Requirements Gathering /2.1 Kickoff meeting.md
+++ b/02.Requirements Gathering /2.1 Kickoff meeting.md
@@ -1,4 +1,4 @@
-# 2.1 BRD Kick-off Meeting
+# BRD Kick-off Meeting
 
 ## Context
 This kick-off meeting is initiated by the **IT Security Department of CHR Brussels**, under the sponsorship of the **Chief Information Officer (CIO)**.  
