Update 2.2 Stakeholder Register.md

--- a/02.Requirements Gathering /2.2 Stakeholder Register.md
+++ b/02.Requirements Gathering /2.2 Stakeholder Register.md
@@ -1,4 +1,4 @@
-# 2.2 Stakeholder Register
+# Stakeholder Register
 
 ## Context
 The stakeholder register identifies all key participants involved in the **CHR Brussels IAM Transformation Program**.  
