Update 2.3 RACI Matrix.md

--- a/02.Requirements Gathering /2.3 RACI Matrix.md
+++ b/02.Requirements Gathering /2.3 RACI Matrix.md
@@ -1,4 +1,4 @@
-# 2.3 RACI Matrix
+# RACI Matrix
 
 ## Purpose
 This RACI matrix defines who is Responsible, Accountable, Consulted, and Informed for key workstreams of the IAM transformation program at CHR Brussels.
