Update 2.4 Communication Plan.md

--- a/02.Requirements Gathering /2.4 Communication Plan.md
+++ b/02.Requirements Gathering /2.4 Communication Plan.md
@@ -1,4 +1,4 @@
-# 2.4 Communication Plan
+# Communication Plan
 
 ## Context
 The IAM Transformation Program at CHR Brussels involves multiple stakeholder groups: hospital leadership, IT Security, HR, clinical application owners (DXPlanning, QBLOC, OASIS+), compliance, and end-user representatives from medical and administrative teams.
