--- a/02.Requirements Gathering /2.5 Project timeline.md
+++ b/02.Requirements Gathering /2.5 Project timeline.md
@@ -1,4 +1,4 @@
-# 2.5 Project Timeline
+# Project Timeline
 
 ## Overview
 The IAM Transformation Program at CHR Brussels will be delivered in phases.  
