--- a/02.Requirements Gathering /2.6 Business-Drivers-and-Problem-statement.md
+++ b/02.Requirements Gathering /2.6 Business-Drivers-and-Problem-statement.md
@@ -1,4 +1,4 @@
-# 2.6 Business Drivers and Problem Statement
+# Business Drivers and Problem Statement
 
 ## Business Context
 CHR Brussels is responsible for delivering safe, high-quality patient care while operating under strict regulatory, privacy, and continuity-of-care obligations.
