--- a/02.Requirements Gathering /2.7 Risk-Matrix-Visualization.md
+++ b/02.Requirements Gathering /2.7 Risk-Matrix-Visualization.md
@@ -1,4 +1,4 @@
-# 2.7 Risk Matrix – Impact vs Probability
+# Risk Matrix – Impact vs Probability
 
 | **Impact ↓** / **Probability →** | **Low** | **Medium** | **High** |
 |----------------------------------|----------|-------------|-----------|
