--- a/02.Requirements Gathering /2.8 Risk-and-Impact-Analysis.md
+++ b/02.Requirements Gathering /2.8 Risk-and-Impact-Analysis.md
@@ -1,4 +1,4 @@
-# 2.8 Risk and Impact Analysis
+# Risk and Impact Analysis
 
 ## Context
 CHR Brussels handles thousands of patient interactions daily — from appointment scheduling to surgery planning and patient record management.  
