--- a/02.Requirements Gathering /2.9.9 Business-Requirements-Matrix.md
+++ b/02.Requirements Gathering /2.9.9 Business-Requirements-Matrix.md
@@ -1,4 +1,4 @@
-# 2.10 Business Requirements Matrix
+# Business Requirements Matrix
 
 ## Objective
 This section consolidates the business requirements derived from the IAM Solution Mapping (Section 3.3) and the Risk Analysis (Section 3.2).  
