Update 2.9.9.9 Success criteria.md

--- a/02.Requirements Gathering /2.9.9.9 Success criteria.md
+++ b/02.Requirements Gathering /2.9.9.9 Success criteria.md
@@ -1,4 +1,4 @@
-# 2.11 Success Criteria
+# Success Criteria
 
 ## Objective
 The purpose of this section is to define measurable success indicators for the IAM implementation at CHR Brussels.  
