Update 3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md

--- a/03.Conception/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
+++ b/03.Conception/3.1 Stakeholders Workshops BPMN AS_IS_TO_BE.md
@@ -1,4 +1,4 @@
-# 3.1 AS IS & TO BE BPMN 
+# AS IS & TO BE BPMN 
 ## Consultant approach
 The approach to requirements gathering for BPMN creation is based on a rigorous and participative methodology that ensures all business needs are thoroughly captured and formalized. It begins with a comprehensive assessment of the current environment, including a review of identity and access management processes through interviews and document analysis to understand key priorities and risks.
 
