Update 3.2 IAM Dataflow diagram.md

--- a/03.Conception/3.2 IAM Dataflow diagram.md
+++ b/03.Conception/3.2 IAM Dataflow diagram.md
@@ -1,4 +1,4 @@
-# 3.1 IAM Dataflow Diagram
+# IAM Dataflow Diagram
 
 This section illustrates how identity and access data move through the CHR Brussels IAM ecosystem.
 
